--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,3 +77,14 @@
       "calt" 1;
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
